// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MarkdownRenderer snapshots > renders GFM table 1`] = `
<div>
  <article
    class="markdown"
  >
    <table>
      <thead>
        <tr>
          <th>
            Col A
          </th>
          <th>
            Col B
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            a
          </td>
          <td>
            b
          </td>
        </tr>
      </tbody>
    </table>
  </article>
</div>
`;

exports[`MarkdownRenderer snapshots > renders anchor with hash href 1`] = `
<div>
  <article
    class="markdown"
  >
    <p>
      <a
        href="#section"
        node="[object Object]"
      >
        Jump
      </a>
    </p>
  </article>
</div>
`;

exports[`MarkdownRenderer snapshots > renders headings with slugified ids 1`] = `
<div>
  <article
    class="markdown"
  >
    <h1
      id="hello-worldnn-sub-section"
      node="[object Object]"
    >
      Hello World\\n\\n## Sub Section
    </h1>
  </article>
</div>
`;

exports[`MarkdownRenderer snapshots > renders inline code and code blocks 1`] = `
<div>
  <article
    class="markdown"
  >
    <p>
      Use 
      <code>
        const x = 1
      </code>
       inline.
    </p>
    

    <pre>
      <code
        class="language-ts"
      >
        const y = 2;

      </code>
    </pre>
  </article>
</div>
`;

exports[`Toaster snapshots > renders a single error toast 1`] = `
<div>
  <div
    class="toaster"
  >
    <div
      class="toast toast-error"
    >
      <span
        class="toast-msg"
      >
        Something went wrong
      </span>
      <button
        class="toast-close"
      >
        ✕
      </button>
    </div>
  </div>
</div>
`;

exports[`Toaster snapshots > renders a success toast 1`] = `
<div>
  <div
    class="toaster"
  >
    <div
      class="toast toast-success"
    >
      <span
        class="toast-msg"
      >
        Saved successfully
      </span>
      <button
        class="toast-close"
      >
        ✕
      </button>
    </div>
  </div>
</div>
`;

exports[`Toaster snapshots > renders an info toast 1`] = `
<div>
  <div
    class="toaster"
  >
    <div
      class="toast toast-info"
    >
      <span
        class="toast-msg"
      >
        Just so you know
      </span>
      <button
        class="toast-close"
      >
        ✕
      </button>
    </div>
  </div>
</div>
`;
